# burrito-battle

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.json
contract/: Cargo.toml  README.md
contract/nft/: Cargo.toml
contract/nft/near-contract-standards-3.2.0/src/non_fungible_token/: metadata.rs
contract/nft/near-contract-standards-3.2.0/src/non_fungible_token/core/: core_impl.rs
contract/nft/src/: lib.rs
contracts/burrito/: Cargo.toml  blobs.json  build.sh
contracts/burrito/nft/: Cargo.toml
contracts/burrito/nft/near-contract-standards-3.2.0/src/non_fungible_token/: macros.rs  mod.rs
contracts/burrito/nft/near-contract-standards-3.2.0/src/non_fungible_token/core/: mod.rs  receiver.rs  resolver.rs
contracts/burrito/nft/src/: lib.rs
contracts/burrito/src/: burritos.rs  evolve.rs  fights_cpu.rs  fights_pvp.rs  lib.rs  migrate.rs  nft_core.rs  reset_conditions.rs  whitelist.rs
contracts/general/nft/src/: lib.rs
contracts/items/: Cargo.toml  blobs.json  build.sh
contracts/items/src/: fights.rs  items.rs  lib.rs  migrate.rs  nft_core.rs
contracts/playervscpu/: Cargo.toml  blobs.json  build.sh
contracts/playervscpu/src/: fights_cpu.rs  lib.rs  migrate.rs  xcc.rs
contracts/playervsplayer/: Cargo.toml  build.sh
contracts/playervsplayer/src/: enumerations.rs  fights_pvp.rs  lib.rs  migrate.rs  old_pvp.rs
contracts/potions/: Cargo.toml  blobs.json  build.sh
contracts/potions/src/: lib.rs  migrate.rs  nft_core.rs  potions.rs
contracts/strw-token/: Cargo.toml  README.md  build.sh
contracts/strw-token/strw-token/: Cargo.toml
(+8 files in other folders)
