
[package]
name = "non-fungible-token"
version = "1.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards={path ="./near-contract-standards-3.2.0"}
serde_json = "1.0"
lazy_static="1.4.0"
instant="0.1.12"